<resources>
    <string name="app_name">My_First_Application</string>
    <string name="c">C</string>
    <string name="button_percent">%</string>
    <string name="button_share">/</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_x">x</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_minus">-</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_plus">+</string>
    <string name="button_negative">+/-</string>
    <string name="button_0">0</string>
    <string name="button_poin">,</string>
    <string name="button_equally">=</string>
    <string name="button_brackets">()</string>
    <string name="todo">TODO</string>
</resources>