<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="263dp">


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="244dp"
            app:srcCompat="@drawable/cloud_sky_mountain_snow_7497" />
    </FrameLayout>

    <Button
        android:id="@+id/button"
                android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="@string/c"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="243dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="@string/button_brackets"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="243dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="@string/button_percent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="243dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="@string/button_share"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="243dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="@string/button_7"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="291dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="@string/button_8"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="291dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="@string/button_9"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="291dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="@string/button_x"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="291dp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="101dp"
        android:layout_height="46dp"
        android:text="@string/button_4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="333dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="@string/button_5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="332dp" />

    <Button
        android:id="@+id/button16"
        android:layout_width="102dp"
        android:layout_height="46dp"
        android:text="@string/button_6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="333dp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="102dp"
        android:layout_height="46dp"
        android:text="@string/button_minus"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="333dp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="@string/button_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="380dp" />

    <Button
        android:id="@+id/button14"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="380dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="@string/button_3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="380dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="@string/button_plus"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="380dp" />


    <Button
        android:id="@+id/button17"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="@string/button_negative"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="428dp" />

    <Button
        android:id="@+id/button20"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="@string/button_0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="428dp" />

    <Button
        android:id="@+id/button18"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:text="@string/button_poin"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="428dp" />

    <Button
        android:id="@+id/button19"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:text="@string/button_equally"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="428dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="204dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-44dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="625dp" />




</androidx.constraintlayout.widget.ConstraintLayout>